# kiphone

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  xiphonereader.cpp  xiphonereader.h
